k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: viajiamos
  labels:
    app.kubernetes.io/part-of: viajiamos
    pod-security.kubernetes.io/enforce: restricted
